Opened 7 years ago

Closed 7 years ago

#8160 closed defect (fixed)

left shift of negative value bug in libavcodec/ituh263dec.c

Reported by: Suhwan Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: ubsan
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:
There is left shift of negative value bug in libavcodec/ituh263dec.c
How to reproduce:

% ./ffmpeg_g -t 2 -stream_loop 13 -loglevel 99 -y -i powder1.mov -target dvd -map 0 -c: s:8 zmbv -vframes 61 output/tmp.ilbc

ffmpeg version N-94943-g1db6e47e85
built on ubuntu 18.04 with clang-6 and UBSAN option.

Attachments (2)

gdb-ituh264dec (28.4 KB ) - added by Suhwan 7 years ago.
powder1.mov (844.4 KB ) - added by Suhwan 7 years ago.
poc

Download all attachments as: .zip

Change History (3)

by Suhwan, 7 years ago

Attachment: gdb-ituh264dec added

by Suhwan, 7 years ago

Attachment: powder1.mov added

poc

comment:1 by mkver, 7 years ago

Component: undeterminedavcodec
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.